# Game

./: README.md  main.c  main_bk.c  mylib.c  mylib.h  test.c  test.txt
2DArray/: main.c
bmp/: function.c  function.h  main.c
game/: CMakeLists.txt  battle.c  battle.h  config.h  function.c  function.h  main.c
